<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.LanguageSelectionActivity">

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTitleLineOne"
            android:text="@string/choose_language_line_one"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/twenty_four_dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/one_zero_eight_dp"
            android:textSize="@dimen/twenty_sp"/>

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTitleLineTwo"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleLineOne"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/twenty_four_dp"
            android:text="@string/choose_language_line_two"
            android:textSize="@dimen/twenty_sp"/>

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSelectOne"
            android:text="@string/select_one_language"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/twenty_four_dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleLineTwo"
            android:textSize="@dimen/fourteen_sp"/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSelectOne"
            android:layout_marginTop="@dimen/thirty_eight_dp"
            android:id="@+id/radioGroupLanguage">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonEnglish"
                android:background="@drawable/ic_radio_background"
                android:text="@string/english"
                android:button="@null"
                android:gravity="center"
                android:onClick="onRadioButtonClicked"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonHindi"
                android:background="@drawable/ic_radio_background"
                android:text="@string/hindi"
                android:button="@null"
                android:gravity="center"
                android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonContinueLanguage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/twenty_four_dp"
            android:layout_marginEnd="@dimen/twenty_four_dp"
            android:layout_marginBottom="@dimen/thirty_eight_dp"
            android:background="@drawable/ic_button_bg"
            android:text="@string/continue_lang"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sixteen_sp"
            android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>