<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewBusIcon"
            app:srcCompat="@drawable/bus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewIntroTitleText"
            android:text="@string/intro_title_text_two"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBusIcon"
            android:textSize="@dimen/twenty_sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/forty_dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewIntroTextOne"/>

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewIntroTextOne"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            android:text="@string/intro_text_two"
            style="@style/DescriptionText"
            app:layout_constraintTop_toBottomOf="@+id/textViewIntroTitleText"
            android:layout_marginTop="@dimen/eighteen_dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewIntroTextLineTwo"/>

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewIntroTextLineTwo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/intro_text_two_line_two"
            style="@style/DescriptionText"
            app:layout_constraintTop_toBottomOf="@+id/textViewIntroTextOne"/>


</android.support.constraint.ConstraintLayout>