<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".view.fragment.EnterPhoneNumberFragment"
             android:background="@color/colorWhite">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTitlePhoneOne"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/one_zero_eight_dp"
                android:layout_marginStart="@dimen/thirty_eight_dp"
                android:text="@string/intro_phone_title"
                style="@style/DescriptionText"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPhoneNumber"/>


        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitlePhoneOne"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/thirty_eight_dp"
                android:layout_marginStart="@dimen/thirty_eight_dp"
                android:layout_marginEnd="@dimen/thirty_eight_dp"
                android:id="@+id/textInputLayoutPhoneNumber">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextEnterPhoneNumber"
                    android:hint="@string/phone_number"
                    android:textSize="@dimen/sixteen_sp"
                    android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPhoneNumber"
                android:layout_marginTop="@dimen/one_zero_eight_dp"
                android:layout_marginStart="@dimen/thirty_eight_dp"
                android:layout_marginEnd="@dimen/thirty_eight_dp"
                android:background="@drawable/ic_button_next"
                android:text="@string/next"
                android:textColor="@color/colorWhite"
                android:textAllCaps="true"
                android:gravity="center"
                android:textSize="@dimen/sixteen_sp"
                android:id="@+id/buttonNext"
                android:visibility="gone"/>


    </android.support.constraint.ConstraintLayout>


</FrameLayout>